fix(Header, Footer): use correct logo in dark mode

--- a/@udir-design/react/src/components/footer/footer.css
+++ b/@udir-design/react/src/components/footer/footer.css
@@ -48,6 +48,17 @@
     height: 54px;
     order: 2;
 
+    > img {
+      height: var(--ds-size-12);
+    }
+
+    > img:first-of-type {
+      display: block;
+    }
+    > img:last-of-type {
+      display: none;
+    }
+
     @composes ds-focus from '@digdir/designsystemet-css/base.css';
   }
 
@@ -79,6 +90,26 @@
         flex: 0 1 auto;
         order: 3;
       }
+    }
+  }
+}
+
+[data-color-scheme='dark'] .uds-footer__logo {
+  > img:first-of-type {
+    display: none;
+  }
+  > img:last-of-type {
+    display: block;
+  }
+}
+
+[data-color-scheme='auto'] {
+  @media (prefers-color-scheme: dark) {
+    .uds-footer__logo > img:first-of-type {
+      display: none;
+    }
+    .uds-footer__logo > img:last-of-type {
+      display: block;
     }
   }
 }
